[gd_scene load_steps=8 format=3 uid="uid://b3sc76yb0ic14"]

[ext_resource type="Script" uid="uid://cbqhswdgobdgw" path="res://scripts/main_menu.gd" id="1_8ln24"]
[ext_resource type="Texture2D" uid="uid://brqi5cskbd0ai" path="res://assets/background.jpg" id="2_rtw2f"]
[ext_resource type="Texture2D" uid="uid://dxupaadyj0076" path="res://assets/susan/susan_outline.png" id="3_oa1go"]
[ext_resource type="Texture2D" uid="uid://dbaq67amwut8g" path="res://assets/menu/startgametext.png" id="4_tbmy8"]
[ext_resource type="Texture2D" uid="uid://bcr2x6oc0we43" path="res://assets/menu/creditstext.png" id="5_jk1qb"]
[ext_resource type="Texture2D" uid="uid://b56qprdik4xgh" path="res://assets/menu/not_so_lazy_susan_title.png" id="6_rtw2f"]
[ext_resource type="Texture2D" uid="uid://bxfsnhe4nos7a" path="res://assets/menu/Glow-PNG-Clipart-Background.png" id="7_oa1go"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_8ln24")

[node name="Background" type="Sprite2D" parent="."]
modulate = Color(0.674815, 0.674815, 0.674815, 1)
position = Vector2(576, 384)
scale = Vector2(0.516, 0.516)
texture = ExtResource("2_rtw2f")

[node name="SusanOutline" type="Sprite2D" parent="."]
z_index = 13
position = Vector2(403, 341)
rotation = -0.0523599
scale = Vector2(0.362786, 0.367243)
texture = ExtResource("3_oa1go")

[node name="StartGameText" type="Sprite2D" parent="."]
position = Vector2(963.128, 505.781)
scale = Vector2(0.355125, 0.355125)
texture = ExtResource("4_tbmy8")

[node name="StartGameButton" type="ColorRect" parent="StartGameText"]
offset_left = -440.707
offset_top = -92.5148
offset_right = 445.293
offset_bottom = 72.4852
color = Color(1, 1, 1, 0)

[node name="CreditsText" type="Sprite2D" parent="."]
position = Vector2(1021, 580)
scale = Vector2(0.341875, 0.341875)
texture = ExtResource("5_jk1qb")

[node name="CreditsButton" type="ColorRect" parent="CreditsText"]
offset_left = -303.0
offset_top = -81.0
offset_right = 303.0
offset_bottom = 68.0
color = Color(1, 1, 1, 0)

[node name="title" type="Sprite2D" parent="."]
position = Vector2(782, 286)
scale = Vector2(0.716, 0.716)
texture = ExtResource("6_rtw2f")

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(419, 113)
scale = Vector2(1.1094, 1.07505)
energy = 0.39
texture = ExtResource("7_oa1go")

[node name="PointLight2D2" type="PointLight2D" parent="."]
position = Vector2(784, 60)
energy = 0.39
texture = ExtResource("7_oa1go")

[connection signal="gui_input" from="StartGameText/StartGameButton" to="." method="_on_start_game_button_gui_input"]
[connection signal="mouse_entered" from="StartGameText/StartGameButton" to="." method="_on_start_game_button_mouse_entered"]
[connection signal="mouse_exited" from="StartGameText/StartGameButton" to="." method="_on_start_game_button_mouse_exited"]
[connection signal="gui_input" from="CreditsText/CreditsButton" to="." method="_on_credits_button_gui_input"]
[connection signal="mouse_entered" from="CreditsText/CreditsButton" to="." method="_on_credits_button_mouse_entered"]
[connection signal="mouse_exited" from="CreditsText/CreditsButton" to="." method="_on_credits_button_mouse_exited"]
